clear white space
clear white space

--- a/tests/loadmore.html
+++ b/tests/loadmore.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <div class="load-wrap">
-            <ul class="load-cont"  style="background-color:#fdab40">
+            <ul class="load-cont"  style="background-color:#f5574b">
                 <li>第一首</li>
                 <li>你是人间的四月天</li>
                 <li>我说你是人间的四月天；</li>
